--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/bootstrap": "^5.0.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.68",
     "@types/react": "^16.9.53",
+    "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.8",
+    "@types/socket.io-client": "^1.4.34",
+    "@types/uuid": "^8.3.0",
+    "bootstrap": "^4.5.3",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "socket.io-client": "^2.3.1",
+    "typescript": "^3.8.0",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
